<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyModule.M3_EmergencyMenu">


    <include layout="@layout/hotline_bar"/>

    <TextView
        android:id="@+id/dailingTitle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:text="@string/predefinedHotlines"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/emergencyDialIcon"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailingTitle"
        app:srcCompat="@drawable/m3_emergency_call_icon" />

    <FrameLayout
        android:id="@+id/ambulanceFrame"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergencyDialIcon">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/m3_fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:paddingTop="13dp"
            android:text="@string/ambulance"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/m3_hospital_icon" />

        <ImageButton
            android:id="@+id/callButton1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="270dp"
            android:background="@drawable/m3_call_button"
            android:clickable="true"
            android:contentDescription="@string/callBtn1"
            app:srcCompat="@drawable/m3_call_icon" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/polisFrame"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ambulanceFrame"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="398dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/m3_fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:paddingTop="13dp"
            android:text="@string/polis"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26dp" />

        <ImageButton
            android:id="@+id/callButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="270dp"
            android:background="@drawable/m3_call_button"
            android:contentDescription="@string/callBtn2"
            app:srcCompat="@drawable/m3_call_icon" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/m3_polis_icon" />


    </FrameLayout>


    <FrameLayout
        android:id="@+id/FireBrigadeFrame"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/polisFrame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/m3_fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:paddingTop="13dp"
            android:text="@string/fireBrigade"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            tools:ignore="TextSizeCheck" />

        <ImageButton
            android:id="@+id/callButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="270dp"
            android:background="@drawable/m3_call_button"
            android:contentDescription="@string/callBtn3"
            app:srcCompat="@drawable/m3_call_icon" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/m3_fire_truck_icon" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FireBrigadeFrame">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/m3_fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:paddingTop="13dp"
            android:text="@string/naturalDisaster"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/callButton4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="270dp"
            android:background="@drawable/m3_call_button"
            android:contentDescription="@string/callBtn4"
            app:srcCompat="@drawable/m3_call_icon" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/m3_natural_disaster_icon" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>