<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyMenu">


    <TextView
        android:id="@+id/dailingTitle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/baloo"
        android:text="@string/predefinedHotlines"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/emergencyDialIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <ImageView
        android:id="@+id/emergencyDialIcon"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailingTitle"
        app:srcCompat="@drawable/emergency_call_icon" />

    <FrameLayout
        android:id="@+id/ambulanceFrame"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergencyDialIcon">

        <TextView
            android:id="@+id/TVambulance"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="@font/baloo"
            android:paddingTop="13dp"
            android:text="@string/ambulance"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"/>

        <ImageView
            android:id="@+id/hospitalIcon"
            android:layout_width="60dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/hospital_icon" />

        <ImageButton
            android:id="@+id/callButton1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="270dp"
            android:background="@drawable/call_button"
            android:contentDescription="@string/callBtn1"
            app:srcCompat="@drawable/call_icon"
            android:clickable="true"/>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/polisFrame"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="28dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="398dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ambulanceFrame">

        <TextView
            android:id="@+id/TVpolice"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="@font/baloo"
            android:paddingTop="13dp"
            android:text="@string/polis"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26dp" />

        <ImageButton
            android:id="@+id/callButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="270dp"
            android:background="@drawable/call_button"
            android:contentDescription="@string/callBtn2"
            app:srcCompat="@drawable/call_icon" />

        <ImageView
            android:id="@+id/polisIcon"
            android:layout_width="60dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/polis_icon" />


    </FrameLayout>


    <FrameLayout
        android:id="@+id/FireBrigadeFrame"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/polisFrame">

        <TextView
            android:id="@+id/TVFireBridgade"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="@font/baloo"
            android:paddingTop="13dp"
            android:text="@string/fireBrigade"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            tools:ignore="TextSizeCheck" />

        <ImageButton
            android:id="@+id/callButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="270dp"
            android:background="@drawable/call_button"
            android:contentDescription="@string/callBtn3"
            app:srcCompat="@drawable/call_icon" />

        <ImageView
            android:id="@+id/fireBrigadeIcon"
            android:layout_width="60dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/fire_truck_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/NaturalDisasterFrame"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FireBrigadeFrame">


        <TextView
            android:id="@+id/TVNaturalDisaster"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="@font/baloo"
            android:paddingTop="13dp"
            android:text="@string/naturalDisaster"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/callButton4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="270dp"
            android:background="@drawable/call_button"
            android:contentDescription="@string/callBtn4"
            app:srcCompat="@drawable/call_icon" />

        <ImageView
            android:id="@+id/naturalDIsasterIcon"
            android:layout_width="50dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/natural_disaster_icon" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>