<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyChat">

    <ImageView
        android:id="@+id/emergencyChatIcon"
        android:layout_width="105dp"
        android:layout_height="71dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emergency_chat_icon" />

    <TextView
        android:id="@+id/chatTitle"
        android:layout_width="249dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/baloo"
        android:text="@string/chatTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <FrameLayout
        android:id="@+id/ambulanceFrame"
        android:layout_width="365dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="170dp">

        <TextView
            android:id="@+id/TVambulance"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="@font/baloo"
            android:paddingTop="11dp"
            android:text="@string/ambulance"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="29sp" />

        <ImageView
            android:id="@+id/hospitalIcon"
            android:layout_width="73dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/hospital_icon" />

        <ImageButton
            android:id="@+id/chatButton1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="303dp"
            android:background="@drawable/arrow_circle"
            android:clickable="true"
            android:contentDescription="@string/callBtn1"
            />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/polisFrame"
        android:layout_width="365dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ambulanceFrame">

        <TextView
            android:id="@+id/TVpolice"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="@font/baloo"
            android:paddingTop="11dp"
            android:text="@string/polis"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="29dp" />

        <ImageButton
            android:id="@+id/chatButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="303dp"
            android:background="@drawable/arrow_circle"
            android:contentDescription="@string/callBtn2"
             />

        <ImageView
            android:id="@+id/polisIcon"
            android:layout_width="73dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/polis_icon" />


    </FrameLayout>


    <FrameLayout
        android:id="@+id/FireBrigadeFrame"
        android:layout_width="365dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/polisFrame">

        <TextView
            android:id="@+id/TVFireBridgade"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="@font/baloo"
            android:paddingTop="11dp"
            android:text="@string/fireBrigade"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="29sp"
            tools:ignore="TextSizeCheck" />

        <ImageButton
            android:id="@+id/chatButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="303dp"
            android:background="@drawable/arrow_circle"
            android:contentDescription="@string/callBtn3"
             />

        <ImageView
            android:id="@+id/fireBrigadeIcon"
            android:layout_width="73dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/fire_truck_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/NaturalDisasterFrame"
        android:layout_width="365dp"
        android:layout_height="65dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FireBrigadeFrame">


        <TextView
            android:id="@+id/TVNaturalDisaster"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/fourside_roundbutton"
            android:clickable="false"
            android:fontFamily="@font/baloo"
            android:paddingTop="11dp"
            android:paddingLeft="4dp"
            android:text="@string/naturalDisaster"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="29sp"
            />

        <ImageButton
            android:id="@+id/chatButton4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="303dp"
            android:background="@drawable/arrow_circle"
            android:contentDescription="@string/callBtn4"
             />

        <ImageView
            android:id="@+id/naturalDIsasterIcon"
            android:layout_width="73dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="6dp"
            app:srcCompat="@drawable/natural_disaster_icon" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>