<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/framelayout1"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/framelayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/fourside_roundbutton">

        <ImageView
            android:id="@+id/sosIcon"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/left_round_icon"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sos_icon_foreground"
            />

        <Button
            android:id="@+id/emergencyDailButton"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:background="@drawable/right_round_icon"
            android:fontFamily="@font/baloo"
            android:keepScreenOn="true"
            android:text="@string/emergency"
            android:textSize="28sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/framelayout2"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/fourside_roundbutton"
        app:layout_constraintTop_toBottomOf="@id/framelayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/left_round_icon"
            android:src="@drawable/share_location"
             />

        <Button
            android:id="@+id/shareLocationButton"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:background="@drawable/right_round_icon"
            android:fontFamily="@font/baloo"
            android:keepScreenOn="true"
            android:text="@string/location"
            android:textSize="28sp" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/framelayout3"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@drawable/fourside_roundbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framelayout2">

        <ImageView
            android:id="@+id/emergencyChatIcon"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/left_round_icon"
            android:contentDescription="@string/app_name"
            android:paddingStart="5dp"
            android:src="@drawable/medical_icon" />

        <Button
            android:id="@+id/emergencyChatButton"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:background="@drawable/right_round_icon"
            android:fontFamily="@font/baloo"
            android:text="@string/chat"
            android:textSize="28sp" />

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>