<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/theme_darkblue"
        app:layout_constraintBottom_toBottomOf="@+id/EmergencyPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/EmergencyPage"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="16dp"
        android:text="@string/moduleTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_arrow_menu"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/m3_back_arrow" />

    <FrameLayout
        android:id="@+id/framelayout1"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/framelayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/m3_fourside_roundbutton">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/m3_left_round_icon"
            android:contentDescription="@string/app_name"
            android:src="@drawable/m3_sos_icon_foreground"
            />

        <Button
            android:id="@+id/emergencyDailButton"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:background="@drawable/m3_right_round_icon"
            android:fontFamily="sans-serif"
            android:keepScreenOn="true"
            android:text="@string/emergency"
            android:textSize="28sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/framelayout2"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/m3_fourside_roundbutton"
        app:layout_constraintTop_toBottomOf="@id/framelayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/m3_left_round_icon"
            android:src="@drawable/m3_share_location"
             />

        <Button
            android:id="@+id/shareLocationButton"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:background="@drawable/m3_right_round_icon"
            android:fontFamily="sans-serif"
            android:keepScreenOn="true"
            android:text="@string/location"
            android:textSize="28sp" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@drawable/m3_fourside_roundbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framelayout2">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/m3_left_round_icon"
            android:contentDescription="@string/app_name"
            android:paddingStart="5dp"
            android:src="@drawable/m3_medical_icon" />

        <Button
            android:id="@+id/emergencyChatButton"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:background="@drawable/m3_right_round_icon"
            android:fontFamily="sans-serif"
            android:text="@string/chat"
            android:textSize="28sp" />

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>